# Thoth

./: .gitignore  .tool-versions  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  README.zh-CN.md  package-lock.json  package.json  pyproject.toml  settings.json  tsconfig.base.json
.agent-os/: acceptance-report.md  architecture-milestones.md  change-decisions.md  lessons-learned.md  project-index.md  requirements.md  run-log.md  todo.md  upstream-transplant.md
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
agents/: codex-worker.md  thoth-main.md
assets/: thoth-teaser-v4.provenance.json
commands/: argue.md  auto.md  dashboard.md  discuss.md  doctor.md  extend.md  extension.md  init.md  loop.md  orchestration.md  plugin.md  report.md  review.md  run.md  status.md  sync.md  tui.md
contracts/: audit.md  codex.md  core.md  counsel.md  exec.md  memory.md  testing.md
docs/: development.md  harness-question-clarify-research.md  legacy-codex-rescue.md  packaging.md  release.md  runtime-tool-bridge-clarify-research.md  testing.md  ui-review-scorecard.md
hooks/: hooks.json
scripts/: build-mvp-update-manifest.mjs  check-brand-assets.mjs  clean-package-dist.mjs  dashboard.sh  dev-home.sh  doctor-android.mjs  doctor.py  extend.py  generate-brand-assets.mjs  gh-local.mjs  init.py  judge-clarify-golden.mjs  judge-clarify-user-simulation.mjs  judge-loop-golden.mjs  loadtest-relay-local.mjs  measure_tracked_source.py  merge-mac-update-manifest.mjs  mvp-release-contract.mjs  package-android-debug-apk.mjs  package-android-release-apk.mjs  (+29 more)
(+334 files in other folders)
