[project]
name = "thoth"
version = "0.1.4"
description = "Dashboard-centered research & engineering project management plugin for Claude Code"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "templates/dashboard/backend", "templates/agent-os/research-tasks"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
